# tiflow

./: .codecov.yml  .dockerignore  .gitignore  .gitmodules  .golangci.yml  .prettierignore  AGENTS.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  DEPS.bzl  Dockerfile  Dockerfile-local  Dockerfile.development  Dockerfile_local  Makefile  Makefile.engine  Notes  OWNERS  OWNERS_ALIASES  README.md  README_CDC.md  README_DM.md  README_Engine.md  README_TiCDC.md  README_Tiflow.md  Test-Cluster-CDC-1587963732074.json  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  bazel-tiflow  changefeed.toml  configuration.txt  ddl.diff  demo.toml  docker-compose-avro.yml  docker-compose-canal.yml  docker-compose-mysql.yml  docker-compose-test.yml  (+18 more)
cdc/: BUILD.bazel  async_sink.go  async_sink_test.go  binding__failpoint_binding__.go  buffer.go  buffer_test.go  cached_inspector.go  cached_inspector_test.go  capture.go  capture_info.go  capture_info_test.go  capture_new.go.bk  capture_test.go  cdc_test.go  changefeed.go  changefeed_test.go  cluster_test.go  codec.go  codec_test.go  doc.go  encoder.go  filter.go  filter_test.go  http.go  http_api_handler.go  http_handler.go  http_router.go  http_router_test.go  http_status.go  http_status_test.go  http_test.go  kv_entry.go  kv_entry_test.go  metrics.go  metrics_owner.go  metrics_processor.go  metrics_server.go  mock_tidb_puller_test.go  mock_tidb_test.go  mysql.go  (+25 more)
cdc/api/: BUILD.bazel  http_errors.go  http_handler.go  interfaces.go  main_test.go  middleware.go  open.go  open_test.go  owner.go  owner_test.go  plugin.go  router.go  router_test.go  status.go  util.go  util_test.go  validator.go  validator_test.go
cdc/async/: async_initializer.go  async_initializer_test.go
cdc/capture/: BUILD.bazel  binding__failpoint_binding__.go  capture.go  capture_info_provider.go  capture_random_test.go  capture_test.go  capture_tester.go  cdc_test.go  election.go  http_errors.go  http_errors_test.go  http_handler.go  http_handler_old.go  http_handler_test.go  http_router.go  http_router_test.go  http_status.go  http_status_test.go  http_util.go  http_validatior.go  http_validator.go  http_validator_test.go  info_for_api.go  main_test.go  metrics.go  metrics_server.go  server.go  server_test.go
cdc/cdctest/: mock_tidb.go  mock_tidb_test.go
cdc/contextutil/: BUILD.bazel  ctx.go  ctx_test.go
cdc/controller/: controller.go  controller_test.go  query.go
cdc/entry/: BUILD.bazel  bench_avro_decoding_test.go  chunk.go  chunk_bench_test.go  chunk_test.go  codec.go  codec_test.go  kv_entry.go  kv_entry_test.go  main_test.go  metrics.go  mounter.go  mounter_group.go  mounter_group_test.go  mounter_test.go  schema_builder.go  schema_builder_test.go  schema_storage.go  schema_storage_test.go  schema_test.go  schema_test_helper.go  testkit.go  validator.go
cdc/kv/: BUILD.bazel  buffer.go  buffer_test.go  client.go  client_bench_test.go  client_mock.go  client_mock_test.go  client_single.go  client_test.go  client_v2.go  etcd.go  etcd_test.go  exclusive_stream.go  grpc_pool.go  grpc_pool_impl.go  grpc_pool_impl_test.go  long_txn_resolver.go  long_txn_resolver_test.go  main_test.go  matcher.go  matcher_test.go  metrics.go  monitor.go  monitor_test.go  region_cache.go  region_cache_test.go  region_state.go  region_state_bench_test.go  region_worker.go  region_worker_test.go  resolvedts_heap.go  resolvedts_heap_test.go  shared_client.go  shared_client_test.go  shared_region_worker.go  shared_region_worker_test.go  shared_stream.go  sorter.go  sorter_test.go  store_op.go  (+7 more)
cdc/metadata/: errors.go  metadata.go
cdc/metrics/: metrics.go  metrics_test.go
cdc/mock/: mock_tidb.go  mock_tidb_test.go
cdc/model/: BUILD.bazel  capture.go  capture_test.go  changefeed.go  changefeed_test.go  config.go  convert.go  convert_test.go  cyclic.go  cyclic_test.go  errors.go  errors_test.go  http_model.go  http_model_test.go  kv.go  kv_gen.go  kv_gen_test.go  kv_test.go  main_test.go  mounter.go  mounter_test.go  mq.go  mq_test.go  owner.go  owner_test.go  plugin.go  processor.go  protocol.go  protocol_test.go  puller.go  reactor_state.go  reactor_state_test.go  row.go  scheduler.go  schema_storage.go  schema_storage_test.go  sink.go  sink_gen.go  sink_gen_test.go  sink_test.go  (+5 more)
cdc/owner/: BUILD.bazel  async_sink.go  async_sink_test.go  barrier.go  barrier_test.go  bootstrap.go  changefeed.go  changefeed.go__failpoint_stash__  changefeed_manager.go  changefeed_runner.go  changefeed_state.go  changefeed_state_test.go  changefeed_test.go  ddl_handler.go  ddl_holder.go  ddl_manager.go  ddl_manager_test.go  ddl_puller.go  ddl_puller_test.go  ddl_sink.go  ddl_sink_test.go  feed_state.go  feed_state_manager.go  feed_state_manager_test.go  gc_manager.go  gc_manager_test.go  main_test.go  metrics.go  metrics_test.go  new_scheduler.go  owner.go  owner.go__failpoint_stash__  owner_general_test.go  owner_state.go  owner_state_test.go  owner_test.go  scheduler.go  scheduler_test.go  scheduler_v1.go  scheduler_v1_test.go  (+9 more)
cdc/processor/: BUILD.bazel  agent.go  agent_test.go  binding__failpoint_binding__.go  doc.go  etcdkey_test.go  flow_controller.go  main_test.go  manager.go  manager_test.go  messenger.go  metrics.go  processor.go  processor_test.go  state.go  state_test.go
cdc/puller/: BUILD.bazel  Colfer.go  buffer.go  buffer_test.go  ddl_puller.go  ddl_puller_test.go  ddl_util.go  entry_group.go  entry_group_test.go  entry_sorter.go  entry_sorter_test.go  file_sorter.go  main_test.go  metrics.go  mini_event.colf  mock_puller.go  mock_puller_test.go  multiplexing_puller.go  multiplexing_puller_test.go  puller.go  puller_test.go  rectifier.go  rectifier_test.go  sorter.go  sorter_test.go  span_frontier.go  span_frontier_bench_test.go  span_frontier_test.go  txn_test.go  unified_sorter.go
cdc/redo/: BUILD.bazel  applier.go  convert.go  convert_test.go  doc.go  main_test.go  manager.go  manager_test.go  meta_manager.go  meta_manager_test.go  options.go  options_test.go  redo.go  redo_gen.go  redo_gen_test.go  storage.go  storage_blackhole.go  util.go
cdc/replication/: bootstrap.go  owner.go  (+15 more)
(+7428 files in other folders)
