load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cdc",
    srcs = [
        "doc.go",
        "http.go",
        "metrics.go",
        "metrics_server.go",
        "server.go",
    ],
    importpath = "github.com/pingcap/tidb/cdc",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tiflow//cdc/api/owner:go_default_library",
        "@com_github_pingcap_tiflow//cdc/api/status:go_default_library",
        "@com_github_pingcap_tiflow//cdc/api/v1:go_default_library",
        "@com_github_pingcap_tiflow//cdc/api/v2:go_default_library",
        "@com_github_pingcap_tiflow//cdc/capture:go_default_library",
        "@com_github_pingcap_tiflow//cdc/entry:go_default_library",
        "@com_github_pingcap_tiflow//cdc/kv:go_default_library",
        "@com_github_pingcap_tiflow//cdc/owner:go_default_library",
        "@com_github_pingcap_tiflow//cdc/processor:go_default_library",
        "@com_github_pingcap_tiflow//cdc/puller:go_default_library",
        "@com_github_pingcap_tiflow//cdc/redo/common:go_default_library",
        "@com_github_pingcap_tiflow//cdc/scheduler:go_default_library",
        "@com_github_pingcap_tiflow//cdc/sink/metrics:go_default_library",
        "@com_github_pingcap_tiflow//cdc/sink/mq/producer/kafka:go_default_library",
        "@com_github_pingcap_tiflow//cdc/sorter:go_default_library",
        "@com_github_pingcap_tiflow//cdc/sorter/leveldb:go_default_library",
        "@com_github_pingcap_tiflow//cdc/sorter/memory:go_default_library",
        "@com_github_pingcap_tiflow//cdc/sorter/unified:go_default_library",
        "@com_github_pingcap_tiflow//docs/swagger:go_default_library",
        "@com_github_pingcap_tiflow//pkg/actor:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/db:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errors:go_default_library",
        "@com_github_pingcap_tiflow//pkg/etcd:go_default_library",
        "@com_github_pingcap_tiflow//pkg/fsutil:go_default_library",
        "@com_github_pingcap_tiflow//pkg/httputil:go_default_library",
        "@com_github_pingcap_tiflow//pkg/orchestrator:go_default_library",
        "@com_github_pingcap_tiflow//pkg/p2p:go_default_library",
        "@com_github_pingcap_tiflow//pkg/tcpserver:go_default_library",
        "@com_github_pingcap_tiflow//pkg/util:go_default_library",
        "@com_github_pingcap_tiflow//proto/p2p:go_default_library",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/collectors",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@com_github_tikv_client_go_v2//metrics",
        "@io_etcd_go_etcd_client_pkg_v3//logutil",
        "@io_etcd_go_etcd_client_v3//:client",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//backoff",
        "@org_golang_x_net//netutil",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

go_test(
    name = "cdc_test",
    srcs = [
        "http_test.go",
        "server_test.go",
    ],
    embed = [":cdc"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_tiflow//cdc/capture:go_default_library",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errors:go_default_library",
        "@com_github_pingcap_tiflow//pkg/etcd:go_default_library",
        "@com_github_pingcap_tiflow//pkg/httputil:go_default_library",
        "@com_github_pingcap_tiflow//pkg/retry:go_default_library",
        "@com_github_pingcap_tiflow//pkg/security:go_default_library",
        "@com_github_pingcap_tiflow//pkg/util:go_default_library",
        "@com_github_stretchr_testify//require",
        "@com_github_tikv_pd//pkg/tempurl",
        "@io_etcd_go_etcd_client_v3//:client",
        "@io_etcd_go_etcd_server_v3//embed",
        "@org_golang_x_sync//errgroup",
    ],
)
