load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "capture",
    srcs = ["capture.go"],
    importpath = "github.com/pingcap/tidb/cdc/capture",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//cdc/owner:go_default_library",
        "@com_github_pingcap_tiflow//cdc/processor:go_default_library",
        "@com_github_pingcap_tiflow//cdc/processor/pipeline/system:go_default_library",
        "@com_github_pingcap_tiflow//cdc/sorter/leveldb/system:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/context:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errors:go_default_library",
        "@com_github_pingcap_tiflow//pkg/etcd:go_default_library",
        "@com_github_pingcap_tiflow//pkg/migrate:go_default_library",
        "@com_github_pingcap_tiflow//pkg/orchestrator:go_default_library",
        "@com_github_pingcap_tiflow//pkg/p2p:go_default_library",
        "@com_github_pingcap_tiflow//pkg/upstream:go_default_library",
        "@com_github_pingcap_tiflow//pkg/util:go_default_library",
        "@com_github_pingcap_tiflow//pkg/version:go_default_library",
        "@io_etcd_go_etcd_client_v3//concurrency",
        "@io_etcd_go_etcd_server_v3//mvcc",
        "@org_golang_x_time//rate",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "capture_test",
    srcs = [
        "capture_test.go",
        "main_test.go",
    ],
    embed = [":capture"],
    deps = [
        "@com_github_golang_mock//gomock",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//cdc/owner:go_default_library",
        "@com_github_pingcap_tiflow//cdc/owner/mock:go_default_library",
        "@com_github_pingcap_tiflow//cdc/processor/mock:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/etcd:go_default_library",
        "@com_github_pingcap_tiflow//pkg/leakutil:go_default_library",
        "@com_github_stretchr_testify//require",
        "@io_etcd_go_etcd_client_pkg_v3//logutil",
        "@io_etcd_go_etcd_client_v3//:client",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
