load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "contextutil",
    srcs = ["ctx.go"],
    importpath = "github.com/pingcap/tidb/cdc/contextutil",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_tidb//kv",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//pkg/util:go_default_library",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "contextutil_test",
    srcs = ["ctx_test.go"],
    embed = [":contextutil"],
    deps = [
        "@com_github_pingcap_tidb//store/mockstore",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//pkg/util:go_default_library",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_zap//:zap",
    ],
)
