load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "entry",
    srcs = [
        "codec.go",
        "metrics.go",
        "mounter.go",
        "schema_storage.go",
        "schema_test_helper.go",
        "validator.go",
    ],
    importpath = "github.com/pingcap/tidb/cdc/entry",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tidb//config",
        "@com_github_pingcap_tidb//ddl",
        "@com_github_pingcap_tidb//domain",
        "@com_github_pingcap_tidb//kv",
        "@com_github_pingcap_tidb//meta",
        "@com_github_pingcap_tidb//session",
        "@com_github_pingcap_tidb//store/mockstore",
        "@com_github_pingcap_tidb//table",
        "@com_github_pingcap_tidb//tablecodec",
        "@com_github_pingcap_tidb//testkit",
        "@com_github_pingcap_tidb//types",
        "@com_github_pingcap_tidb//util/codec",
        "@com_github_pingcap_tidb//util/rowcodec",
        "@com_github_pingcap_tidb_parser//model",
        "@com_github_pingcap_tidb_parser//mysql",
        "@com_github_pingcap_tiflow//cdc/entry/schema:go_default_library",
        "@com_github_pingcap_tiflow//cdc/kv:go_default_library",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errors:go_default_library",
        "@com_github_pingcap_tiflow//pkg/filter:go_default_library",
        "@com_github_pingcap_tiflow//pkg/retry:go_default_library",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_stretchr_testify//require",
        "@com_github_tikv_client_go_v2//oracle",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

go_test(
    name = "entry_test",
    srcs = [
        "codec_test.go",
        "main_test.go",
        "mounter_test.go",
        "schema_storage_test.go",
    ],
    embed = [":entry"],
    deps = [
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tidb//config",
        "@com_github_pingcap_tidb//ddl",
        "@com_github_pingcap_tidb//domain",
        "@com_github_pingcap_tidb//kv",
        "@com_github_pingcap_tidb//meta",
        "@com_github_pingcap_tidb//session",
        "@com_github_pingcap_tidb//sessionctx",
        "@com_github_pingcap_tidb//store/mockstore",
        "@com_github_pingcap_tidb//tablecodec",
        "@com_github_pingcap_tidb//testkit",
        "@com_github_pingcap_tidb//types",
        "@com_github_pingcap_tidb//util/codec",
        "@com_github_pingcap_tidb_parser//model",
        "@com_github_pingcap_tidb_parser//mysql",
        "@com_github_pingcap_tiflow//cdc/entry/schema:go_default_library",
        "@com_github_pingcap_tiflow//cdc/kv:go_default_library",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/filter:go_default_library",
        "@com_github_pingcap_tiflow//pkg/leakutil:go_default_library",
        "@com_github_pingcap_tiflow//pkg/regionspan:go_default_library",
        "@com_github_stretchr_testify//require",
        "@com_github_tikv_client_go_v2//oracle",
        "@org_uber_go_zap//:zap",
    ],
)
