load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kv",
    srcs = [
        "client.go",
        "grpc_pool.go",
        "grpc_pool_impl.go",
        "matcher.go",
        "metrics.go",
        "region_worker.go",
        "resolvedts_heap.go",
        "store_op.go",
        "token_region.go",
    ],
    importpath = "github.com/pingcap/tidb/cdc/kv",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_kvproto//pkg/cdcpb",
        "@com_github_pingcap_kvproto//pkg/kvrpcpb",
        "@com_github_pingcap_kvproto//pkg/metapb",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tidb//kv",
        "@com_github_pingcap_tidb//meta",
        "@com_github_pingcap_tidb//store/driver",
        "@com_github_pingcap_tiflow//cdc/contextutil:go_default_library",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errors:go_default_library",
        "@com_github_pingcap_tiflow//pkg/flags:go_default_library",
        "@com_github_pingcap_tiflow//pkg/pdutil:go_default_library",
        "@com_github_pingcap_tiflow//pkg/regionspan:go_default_library",
        "@com_github_pingcap_tiflow//pkg/retry:go_default_library",
        "@com_github_pingcap_tiflow//pkg/security:go_default_library",
        "@com_github_pingcap_tiflow//pkg/txnutil:go_default_library",
        "@com_github_pingcap_tiflow//pkg/version:go_default_library",
        "@com_github_pingcap_tiflow//pkg/workerpool:go_default_library",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_tikv_client_go_v2//config",
        "@com_github_tikv_client_go_v2//kv",
        "@com_github_tikv_client_go_v2//oracle",
        "@com_github_tikv_client_go_v2//tikv",
        "@com_github_tikv_pd_client//:client",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//backoff",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//keepalive",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_time//rate",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "kv_test",
    srcs = [
        "client_bench_test.go",
        "client_mock_test.go",
        "client_test.go",
        "grpc_pool_impl_test.go",
        "main_test.go",
        "matcher_test.go",
        "region_worker_test.go",
        "resolvedts_heap_test.go",
        "token_region_test.go",
    ],
    embed = [":kv"],
    deps = [
        "@com_github_golang_protobuf//proto",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_kvproto//pkg/cdcpb",
        "@com_github_pingcap_kvproto//pkg/errorpb",
        "@com_github_pingcap_kvproto//pkg/metapb",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tidb//kv",
        "@com_github_pingcap_tidb//store/mockstore/mockcopr",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errors:go_default_library",
        "@com_github_pingcap_tiflow//pkg/leakutil:go_default_library",
        "@com_github_pingcap_tiflow//pkg/pdutil:go_default_library",
        "@com_github_pingcap_tiflow//pkg/regionspan:go_default_library",
        "@com_github_pingcap_tiflow//pkg/retry:go_default_library",
        "@com_github_pingcap_tiflow//pkg/security:go_default_library",
        "@com_github_pingcap_tiflow//pkg/txnutil:go_default_library",
        "@com_github_pingcap_tiflow//pkg/util:go_default_library",
        "@com_github_pingcap_tiflow//pkg/version:go_default_library",
        "@com_github_stretchr_testify//require",
        "@com_github_tikv_client_go_v2//oracle",
        "@com_github_tikv_client_go_v2//testutils",
        "@com_github_tikv_client_go_v2//tikv",
        "@com_github_tikv_pd_client//:client",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//keepalive",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_goleak//:goleak",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
