load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "model",
    srcs = [
        "capture.go",
        "changefeed.go",
        "errors.go",
        "http_model.go",
        "kv.go",
        "kv_gen.go",
        "mounter.go",
        "owner.go",
        "schema_storage.go",
        "sink.go",
        "sink_gen.go",
    ],
    importpath = "github.com/pingcap/tidb/cdc/model",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tidb//table/tables:go_default_library",
        "@com_github_pingcap_tidb//util/rowcodec:go_default_library",
        "@com_github_pingcap_tidb_parser//model:go_default_library",
        "@com_github_pingcap_tidb_parser//mysql:go_default_library",
        "@com_github_pingcap_tidb_parser//types:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errors:go_default_library",
        "@com_github_pingcap_tiflow//pkg/quotes:go_default_library",
        "@com_github_pingcap_tiflow//pkg/regionspan:go_default_library",
        "@com_github_pingcap_tiflow//pkg/util:go_default_library",
        "@com_github_pingcap_tiflow//pkg/version:go_default_library",
        "@com_github_tikv_client_go_v2//oracle",
        "@com_github_tinylib_msgp//msgp:go_default_library",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "model_test",
    srcs = [
        "capture_test.go",
        "changefeed_test.go",
        "http_model_test.go",
        "kv_gen_test.go",
        "kv_test.go",
        "main_test.go",
        "mounter_test.go",
        "owner_test.go",
        "schema_storage_test.go",
        "sink_gen_test.go",
        "sink_test.go",
    ],
    embed = [":model"],
    deps = [
        "@com_github_pingcap_check//:check",
        "@com_github_pingcap_tidb//util/table-filter:go_default_library",
        "@com_github_pingcap_tidb_parser//model:go_default_library",
        "@com_github_pingcap_tidb_parser//mysql:go_default_library",
        "@com_github_pingcap_tidb_parser//types:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errors:go_default_library",
        "@com_github_pingcap_tiflow//pkg/leakutil:go_default_library",
        "@com_github_pingcap_tiflow//pkg/regionspan:go_default_library",
        "@com_github_stretchr_testify//require",
        "@com_github_tikv_client_go_v2//oracle",
        "@com_github_tinylib_msgp//msgp:go_default_library",
    ],
)
