load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "owner",
    srcs = [
        "barrier.go",
        "changefeed.go",
        "ddl_puller.go",
        "ddl_sink.go",
        "feed_state_manager.go",
        "metrics.go",
        "owner.go",
        "schema.go",
        "status_provider.go",
    ],
    importpath = "github.com/pingcap/tidb/cdc/owner",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_benbjohnson_clock//:clock",
        "@com_github_cenkalti_backoff_v4//:go_default_library",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tidb//kv:go_default_library",
        "@com_github_pingcap_tidb//meta:go_default_library",
        "@com_github_pingcap_tidb_parser//:go_default_library",
        "@com_github_pingcap_tidb_parser//format:go_default_library",
        "@com_github_pingcap_tidb_parser//model:go_default_library",
        "@com_github_pingcap_tiflow//cdc/contextutil:go_default_library",
        "@com_github_pingcap_tiflow//cdc/entry:go_default_library",
        "@com_github_pingcap_tiflow//cdc/entry/schema:go_default_library",
        "@com_github_pingcap_tiflow//cdc/kv:go_default_library",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//cdc/puller:go_default_library",
        "@com_github_pingcap_tiflow//cdc/redo:go_default_library",
        "@com_github_pingcap_tiflow//cdc/scheduler:go_default_library",
        "@com_github_pingcap_tiflow//cdc/sink:go_default_library",
        "@com_github_pingcap_tiflow//cdc/sink/mysql:go_default_library",
        "@com_github_pingcap_tiflow//cdc/sorter/memory:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/context:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errors:go_default_library",
        "@com_github_pingcap_tiflow//pkg/filter:go_default_library",
        "@com_github_pingcap_tiflow//pkg/orchestrator:go_default_library",
        "@com_github_pingcap_tiflow//pkg/regionspan:go_default_library",
        "@com_github_pingcap_tiflow//pkg/txnutil/gc:go_default_library",
        "@com_github_pingcap_tiflow//pkg/upstream:go_default_library",
        "@com_github_pingcap_tiflow//pkg/util:go_default_library",
        "@com_github_pingcap_tiflow//pkg/version:go_default_library",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_tikv_client_go_v2//oracle",
        "@com_github_tikv_pd_client//:client",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_time//rate",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "owner_test",
    srcs = [
        "barrier_test.go",
        "changefeed_test.go",
        "ddl_puller_test.go",
        "ddl_sink_test.go",
        "feed_state_manager_test.go",
        "main_test.go",
        "owner_test.go",
        "schema_test.go",
    ],
    embed = [":owner"],
    deps = [
        "@com_github_benbjohnson_clock//:clock",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tidb//util/codec:go_default_library",
        "@com_github_pingcap_tidb_parser//model:go_default_library",
        "@com_github_pingcap_tidb_parser//mysql:go_default_library",
        "@com_github_pingcap_tiflow//cdc/entry:go_default_library",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//cdc/scheduler:go_default_library",
        "@com_github_pingcap_tiflow//cdc/sink:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/context:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errors:go_default_library",
        "@com_github_pingcap_tiflow//pkg/etcd:go_default_library",
        "@com_github_pingcap_tiflow//pkg/leakutil:go_default_library",
        "@com_github_pingcap_tiflow//pkg/orchestrator:go_default_library",
        "@com_github_pingcap_tiflow//pkg/retry:go_default_library",
        "@com_github_pingcap_tiflow//pkg/txnutil/gc:go_default_library",
        "@com_github_pingcap_tiflow//pkg/upstream:go_default_library",
        "@com_github_pingcap_tiflow//pkg/version:go_default_library",
        "@com_github_stretchr_testify//require",
        "@com_github_tikv_client_go_v2//oracle",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zaptest/observer",
    ],
)
