load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "processor",
    srcs = [
        "doc.go",
        "manager.go",
        "metrics.go",
        "processor.go",
    ],
    importpath = "github.com/pingcap/tidb/cdc/processor",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tiflow//cdc/contextutil:go_default_library",
        "@com_github_pingcap_tiflow//cdc/entry:go_default_library",
        "@com_github_pingcap_tiflow//cdc/kv:go_default_library",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//cdc/processor/pipeline:go_default_library",
        "@com_github_pingcap_tiflow//cdc/puller:go_default_library",
        "@com_github_pingcap_tiflow//cdc/redo:go_default_library",
        "@com_github_pingcap_tiflow//cdc/scheduler:go_default_library",
        "@com_github_pingcap_tiflow//cdc/sink:go_default_library",
        "@com_github_pingcap_tiflow//cdc/sink/metrics:go_default_library",
        "@com_github_pingcap_tiflow//cdc/sorter/memory:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/context:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errors:go_default_library",
        "@com_github_pingcap_tiflow//pkg/filter:go_default_library",
        "@com_github_pingcap_tiflow//pkg/orchestrator:go_default_library",
        "@com_github_pingcap_tiflow//pkg/regionspan:go_default_library",
        "@com_github_pingcap_tiflow//pkg/retry:go_default_library",
        "@com_github_pingcap_tiflow//pkg/upstream:go_default_library",
        "@com_github_pingcap_tiflow//pkg/util:go_default_library",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_tikv_client_go_v2//oracle",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "processor_test",
    srcs = [
        "main_test.go",
        "manager_test.go",
        "processor_test.go",
    ],
    embed = [":processor"],
    deps = [
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tiflow//cdc/entry:go_default_library",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//cdc/processor/pipeline:go_default_library",
        "@com_github_pingcap_tiflow//cdc/redo:go_default_library",
        "@com_github_pingcap_tiflow//cdc/scheduler:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/context:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errors:go_default_library",
        "@com_github_pingcap_tiflow//pkg/etcd:go_default_library",
        "@com_github_pingcap_tiflow//pkg/leakutil:go_default_library",
        "@com_github_pingcap_tiflow//pkg/orchestrator:go_default_library",
        "@com_github_pingcap_tiflow//pkg/upstream:go_default_library",
        "@com_github_stretchr_testify//require",
    ],
)
