load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "redo",
    srcs = [
        "applier.go",
        "convert.go",
        "doc.go",
        "manager.go",
    ],
    importpath = "github.com/pingcap/tidb/cdc/redo",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tidb//br/pkg/storage:go_default_library",
        "@com_github_pingcap_tidb_parser//model:go_default_library",
        "@com_github_pingcap_tiflow//cdc/contextutil:go_default_library",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//cdc/redo/reader:go_default_library",
        "@com_github_pingcap_tiflow//cdc/redo/writer:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errors:go_default_library",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "redo_test",
    srcs = [
        "convert_test.go",
        "main_test.go",
        "manager_test.go",
    ],
    embed = [":redo"],
    deps = [
        "@com_github_pingcap_tidb_parser//charset:go_default_library",
        "@com_github_pingcap_tidb_parser//model:go_default_library",
        "@com_github_pingcap_tidb_parser//mysql:go_default_library",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/leakutil:go_default_library",
        "@com_github_stretchr_testify//require",
    ],
)
